--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=EzyRide
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
+spring.datasource.username=anooj
+spring.datasource.password=1998
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+
+server.port=8081
+
+#secuirty config
+spring.security.user.name = anuj
+spring.security.user.password = 123
+
+#jwt
+jwt.secretKey=asdkjfheiurf94837589fhujiakweq39qe30r9jdf934r
+
+
