1. Driver location impl 2. Ride Request Impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=EzyRide
+
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
 spring.datasource.username=anooj
@@ -7,17 +8,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 
 server.port=8081
 
-#secuirty config
-spring.security.user.name = anuj
-spring.security.user.password = 123
+# Security Configuration
+# Adjust if using JWT or another method
+spring.security.user.name=anuj
+spring.security.user.password=123
 
-#jwt
+# JWT Configuration
 jwt.secretKey=asdkjfheiurf94837589fhujiakweq39qe30r9jdf934r
-
-
