--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=EzyRide
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
+#spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/EzyRide_dev
+
 spring.datasource.username=anooj
 spring.datasource.password=1998
 spring.datasource.driver-class-name=org.postgresql.Driver
