--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=EzyRide
 # PostgreSQL Database Configuration
 #spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
 spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/EzyRide_dev
+#spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 spring.datasource.username=anooj
 spring.datasource.password=1998
@@ -10,7 +11,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
