postgres render db and ride request updation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=EzyRide
 
 # PostgreSQL Database Configuration
-spring.datasource.url=postgresql://ezyride_dev_user:u9SUnJbE01eobEFLLvSuqR2qc0MwZxg8@dpg-cro6i0ij1k6c739f5sn0-a/ezyride_dev
+spring.datasource.url=jdbc:postgresql://dpg-cro6i0ij1k6c739f5sn0-a:5432/ezyride_dev
 spring.datasource.username=ezyride_dev_user
 spring.datasource.password=u9SUnJbE01eobEFLLvSuqR2qc0MwZxg8
 spring.datasource.driver-class-name=org.postgresql.Driver
