corrected the db error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=EzyRide
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-cro6i0ij1k6c739f5sn0-a:5432/ezyride_dev
-spring.datasource.username=ezyride_dev_user
-spring.datasource.password=u9SUnJbE01eobEFLLvSuqR2qc0MwZxg8
+spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
+spring.datasource.username=anooj
+spring.datasource.password=1998
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
