--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,33 @@
 spring.application.name=EzyRide
 
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
-spring.datasource.username=anooj
-spring.datasource.password=1998
-spring.datasource.driver-class-name=org.postgresql.Driver
+## H2 Database Configuration (In-Memory)
+spring.datasource.url=jdbc:h2:mem:testdb;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA/Hibernate Configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-server.port=8081
+# Server Configuration
+server.port=8082
 
 # Security Configuration
-# Adjust if using JWT or another method
+# Used for Basic Authentication (if needed for H2 console or other endpoints)
 spring.security.user.name=anuj
 spring.security.user.password=123
 
 # JWT Configuration
 jwt.secretKey=asdkjfheiurf94837589fhujiakweq39qe30r9jdf934r
+
+## PostgreSQL Database Configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
+#spring.datasource.username=anooj
+#spring.datasource.password=1998
+#spring.datasource.driver-class-name=org.postgresql.Driver
