--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,32 @@
 spring.application.name=EzyRide
 
 ## H2 Database Configuration (In-Memory)
-spring.datasource.url=jdbc:h2:mem:testdb;
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-
+spring.jpa.defer-datasource-initialization=true
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # Server Configuration
 server.port=8082
 
 # Security Configuration
-# Used for Basic Authentication (if needed for H2 console or other endpoints)
 spring.security.user.name=anuj
 spring.security.user.password=123
 
 # JWT Configuration
 jwt.secretKey=asdkjfheiurf94837589fhujiakweq39qe30r9jdf934r
 
-## PostgreSQL Database Configuration
+## PostgreSQL Database Configuration (commented out for now)
 #spring.datasource.url=jdbc:postgresql://localhost:5432/EzyRide_dev
 #spring.datasource.username=anooj
 #spring.datasource.password=1998
