swaggerui impl and logging the login and signin, also readme file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ spring.security.user.password=123
 
 # JWT Configuration
 jwt.secretKey=asdkjfheiurf94837589fhujiakweq39qe30r9jdf934r
+
+#swaggerui and openapi
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.ezyride.EzyRide=DEBUG
+server.error.whitelabel.enabled=false
+server.error.path=/error
