--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,10 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
-server.port=8082
+server.port=8081
 
 # Security Configuration
 spring.security.user.name=anuj
@@ -40,3 +41,9 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.example.ezyride.EzyRide=DEBUG
 server.error.whitelabel.enabled=false
 server.error.path=/error
+
+#redis-configurations
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.ssl.enabled=false
